fixed issue with button on iphones

--- a/styles/form.css
+++ b/styles/form.css
@@ -194,8 +194,7 @@ textarea:hover {
     cursor: pointer;
 }
 
-.submit:hover,
-.submit:active {
+.submit:hover {
     animation: GradientBackground 15s infinite;
     background: linear-gradient(270deg, #58d8e6, #f3b3b3, #b4c4f9, #86db91, #b4c4f9, #f3b3b3, #58d8e6);
     background-size: 900% 900%;
